After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 677434 - Fix up the shell recorder
Fix up the shell recorder
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2012-06-05 05:23 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2012-09-04 22:21 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
shell-recorder: Don't use a default filename (1.30 KB, patch)
2012-06-05 05:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
shell-recorder: Fix accidental fallthrough (898 bytes, patch)
2012-06-05 05:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
shell-recorder: Remove count and unique filename settigs (5.62 KB, patch)
2012-06-05 05:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
shell-recorder: Remove the ability to pause the timeline (5.09 KB, patch)
2012-06-05 05:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
shell-recorder: Fix warning message about unknown escapes (905 bytes, patch)
2012-06-05 05:23 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:38 UTC
We have a lot of unused features and cruft in the shell recorder,
especially with the filename replacements and removal of pause support.
Remove all that junk, and fix up a few errors and issues.
Comment 1 Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:41 UTC
Created attachment 215605 [details] [review]
shell-recorder: Don't use a default filename

The default filename isn't localized and isn't the same one that
the shell sets. Just remove the fallback mechanism, and abort
recording if somebody didn't set the filename
Comment 2 Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:43 UTC
Created attachment 215606 [details] [review]
shell-recorder: Fix accidental fallthrough

Don't append a unique identifier when we asked for a timestamp.
Comment 3 Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:46 UTC
Created attachment 215607 [details] [review]
shell-recorder: Remove count and unique filename settigs

These aren't used anymore.
Comment 4 Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:49 UTC
Created attachment 215608 [details] [review]
shell-recorder: Remove the ability to pause the timeline
Comment 5 Jasper St. Pierre (not reading bugmail) 2012-06-05 05:23:52 UTC
Created attachment 215609 [details] [review]
shell-recorder: Fix warning message about unknown escapes

We were showing the percent character here.
Comment 6 Giovanni Campagna 2012-09-04 22:00:55 UTC
Review of attachment 215605 [details] [review]:

Sure
Comment 7 Giovanni Campagna 2012-09-04 22:01:17 UTC
Review of attachment 215606 [details] [review]:

Yes.
Comment 8 Giovanni Campagna 2012-09-04 22:02:51 UTC
Review of attachment 215607 [details] [review]:

Uhm, I'm not in favor of free code removal usually, but heh, we have git, and it's not we're constantly changing the filename pattern...
Comment 9 Giovanni Campagna 2012-09-04 22:03:44 UTC
Review of attachment 215608 [details] [review]:

Ok
Comment 10 Giovanni Campagna 2012-09-04 22:04:07 UTC
Review of attachment 215609 [details] [review]:

Sure
Comment 11 Jasper St. Pierre (not reading bugmail) 2012-09-04 22:21:40 UTC
Attachment 215605 [details] pushed as f5ca649 - shell-recorder: Don't use a default filename
Attachment 215606 [details] pushed as 70d610b - shell-recorder: Fix accidental fallthrough
Attachment 215607 [details] pushed as 11ce684 - shell-recorder: Remove count and unique filename settigs
Attachment 215608 [details] pushed as f0474ff - shell-recorder: Remove the ability to pause the timeline
Attachment 215609 [details] pushed as 14d0a96 - shell-recorder: Fix warning message about unknown escapes